--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="title_generated_hex">Código HEX Generado</string>
     <string name="btn_close">Cerrar</string>
     <string name="pref_example_file">example.asm</string>
-    <string name="license_content">Este proyecto utiliza tecnología basada en el Megaprocessor original creado por James Newman (v1.0.8). El software Android es de código abierto bajo la licencia MIT. Megaprocessor es una marca registrada de James Newman.</string>
+    <string name="license_content">Este proyecto utiliza tecnología basada en el Megaprocessor original creado por James Newman. El software Android es de código abierto bajo la licencia Apache 2.0. Megaprocessor es una marca registrada de James Newman.</string>
     <string name="tab_new">Nueva Pestaña</string>
     <string name="tab_main">Principal.asm</string>
     <string name="btn_export_popup">Exportar a Descargas</string>
