--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_docs">Instrucciones</string>
     <string name="btn_web_sim">Simulador Web</string>
     <string name="btn_official_site">Sitio oficial</string>
+    <string name="btn_copy_hex">Copiar HEX</string>
 
     <string name="status_assembling">Ensamblando...</string>
     <string name="status_failed">Error en el ensamblado</string>
@@ -13,12 +14,14 @@
     <string name="status_loading">Cargando ejemplo...</string>
     <string name="hint_editor">// Escribe aquí tu código assembly o carga un ejemplo</string>
 
+    <string name="menu_licenses">Licencias</string>
     <string name="menu_privacy">Política de Privacidad</string>
     <string name="menu_about">Acerca de</string>
     <string name="menu_project_info">Proyecto original</string>
     <string name="title_generated_hex">Código HEX Generado</string>
     <string name="btn_close">Cerrar</string>
     <string name="pref_example_file">tic_tac_toe_2.asm</string>
+    <string name="license_content">Megaprocessor ASM Android es un proyecto open source de ensamblador para el Megaprocessor. El proyecto se distribuye bajo licencia Apache 2.0. Megaprocessor y su diseño de hardware pertenecen a James Newman. Este proyecto no sustituye ni modifica los derechos del proyecto original.</string>
 
     <string name="tab_new">Nueva Pestaña</string>
     <string name="tab_main">tic_tac_toe_2.asm</string>
