Align HEX/LST output formatting and improve listing fidelity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,21 +5,23 @@
     <string name="btn_share">Compartir</string>
     <string name="btn_docs">Instrucciones</string>
     <string name="btn_web_sim">Simulador Web</string>
+    <string name="btn_official_site">Sitio oficial</string>
+    <string name="btn_copy_hex">Copiar HEX</string>
     <string name="status_assembling">Ensamblando...</string>
     <string name="status_failed">Error en el ensamblado</string>
     <string name="status_success">Ensamblado con éxito</string>
     <string name="status_loading">Cargando ejemplo...</string>
     <string name="hint_editor">// Escribe aquí tu código assembly o carga un ejemplo</string>
-    <string name="menu_save">Guardar Proyecto</string>
     <string name="menu_licenses">Licencias</string>
     <string name="menu_privacy">Política de Privacidad</string>
     <string name="menu_about">Acerca de</string>
+    <string name="menu_project_info">Proyecto original</string>
     <string name="title_generated_hex">Código HEX Generado</string>
     <string name="btn_close">Cerrar</string>
-    <string name="pref_example_file">example.asm</string>
-    <string name="license_content">Este proyecto utiliza tecnología basada en el Megaprocessor original creado por James Newman. El software Android es de código abierto bajo la licencia Apache 2.0. Megaprocessor es una marca registrada de James Newman.</string>
+    <string name="pref_example_file">tic_tac_toe_2.asm</string>
+    <string name="license_content">Este proyecto Android de ensamblador para Megaprocessor es open source y se distribuye bajo licencia Apache 2.0. Megaprocessor y su diseño original pertenecen a James Newman; esta app no sustituye ni modifica los derechos del proyecto original.</string>
     <string name="tab_new">Nueva Pestaña</string>
-    <string name="tab_main">Principal.asm</string>
+    <string name="tab_main">tic_tac_toe_2.asm</string>
     <string name="btn_export_popup">Exportar a Descargas</string>
     <string name="btn_clear">Limpiar</string>
     <string name="confirm_clear_title">¿Limpiar código?</string>
